src/test/ui/error-codes/E0392.stderr
error[E0392]: parameter `T` is never used
  --> $DIR/E0392.rs:1:10
   |
LL | enum Foo<T> { Bar }
   |          ^ unused parameter
   |
   = help: consider removing `T` or using a marker such as `std::marker::PhantomData`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0392`.
